swap py to dot graphvis